# qua-vis-services

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  data-txt  test.txt
cmake/modules/: FindVulkan.cmake
doc/: Doxyfile
examples/: README.md  benchmark.sh  concatimgs.sh  concatimgsObj.sh  create_grid.py  map.py  renderForVR.sh  results.txt
examples/area/: README.md  points.txt
examples/data/: empower-shack-grid-small.txt  empower-shack-grid.txt  empower-shack.geojson  mooktask_grid.txt  objObservePoint.txt
examples/jssphere/: README.md  sphere.css  sphere.html  sphere.js
examples/shaders/: shader.2.area.comp  shader.2.area.comp.spv  shader.area.comp  shader.area.comp.spv
include/: geojson.hpp
include/qua-vis/: initializer.h  loader.h  quavis.h  window.h
include/qua-vis/loaders/: file-loader.h  luci-loader.h
include/qua-vis/vk/: context.h  logicaldevice.h  pipeline.h
include/quavis/: .gitignore  context.h  debug.h  quavis.h  shaders.h  window.h
include/quavis/device/: logicaldevice.h  physicaldevice.h
include/quavis/memory/: image.h
include/quavis/pipeline/: computepipeline.h  graphicspipeline.h  pipeline.h
include/quavis/vk/: debug.h  instance.h  logicaldevice.h  physicaldevice.h  result.h  swapchain.h  vk.h
include/quavis/vk/commands/: commandbuffer.h  commandpool.h
include/quavis/vk/descriptors/: descriptor.h  descriptorpool.h  descriptorset.h
include/quavis/vk/device/: device.h  logicaldevice.h  physicaldevice.h
include/quavis/vk/geometry/: geoemtry.h  geojson.hpp  geometry.h  triangulate.h  triangulation.hpp  vertex.h
include/quavis/vk/memory/: allocator.h  buffer.h  descriptor.h  image.h  memory.h  shader.h
include/quavis/vk/pipeline/: computepipeline.h  graphicspipeline.h  pipeline.h
src/: area-service.cc  context.cc  generic-service.cc  initializer.cc  maxradial-service.cc  minradial-service.cc  service.cc  skyratio-service.cc  volume-service.cpp  window.cc
src/shaders/: comp.spv  compile.sh  frag.spv  naive.geom  naive.tesc  naive.tese  plot.frag  shader.2.area.comp  shader.2.comp  shader.2.maxradial.comp  shader.2.minradial.comp  shader.2.skyratio.comp  shader.2.volume.comp  shader.area.comp  shader.comp  shader.frag  shader.geom  shader.maxradial.comp  shader.minradial.comp  shader.skyratio.comp  shader.tesc  shader.tese  shader.vert  shader.volume.comp  tesc.spv  tese.spv  vert.spv
src/vk/: context.cc  instance.cc  logicaldevice.cc  physicaldevice.cc  pipeline.cc  swapchain.cc
src/vk/commands/: commandpool.cc
src/vk/descriptors/: descriptorpool.cc  descriptorset.cc
src/vk/device/: logicaldevice.cc  physicaldevice.cc
src/vk/memory/: allocator.cc  buffer.cc  image.cc  shader.cc
src/vk/pipeline/: computepipeline.cc  graphicspipeline.cc  pipeline.cc
test/: data.txt  draw.py  geojson.cc  isovist.txt  isovist.txtt  map.py  test.txt  triangulate.cc  vulkan.cc  vulkan2.cc
